# co-living-app

./: .gitignore  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: db_helper.py
app/api/routes/: api.py  expenses.py
app/api/v1/: api.py
app/api/v1/routes/: families.py  login.py  users.py
app/core/: config.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  expenses.py  family.py  user.py
app/schemas/: expense.py  family.py  user.py
app/services/: family.py  user.py
