[project]
name = "co-living-app"
version = "0.1.0"
description = "App for managing home budget, events, tasks and more"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.128.3",
    "greenlet>=3.3.1",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
